# neural-control

./: CMakeLists.txt  README.md  about.html  common.py  index.html  run_experiments.sh  setup.py  utils.py
assets/: style.css
experimental_results/Task1_case4/case_4_intermediate_trajectory/: DS_Store
learning_scripts/: any_node_MPC.py  any_node_adjoint_RHC.py  any_node_cem.py  any_node_icem.py  any_node_noMPC.py  any_node_spsa.py  letter_curve_MPC.py  letter_curve_adjoint_RHC.py  letter_curve_cem.py  letter_curve_icem.py  letter_curve_noMPC.py  letter_curve_spsa.py  middle_tracking_MPC.py  middle_tracking_adjoint_RHC.py  middle_tracking_cem.py  middle_tracking_icem.py  middle_tracking_noMPC.py  middle_tracking_spsa.py
learning_scripts/inputs/: vertices_1.txt  vertices_tmp.txt  vertices_tmp1.txt  vertices_tmp2.txt
src/: app.cpp  bendingCompute.cpp  bendingCompute.h  collisionDetector.cpp  collisionDetector.h  contactPotentialIMC.cpp  contactPotentialIMC.h  elasticRod.cpp  elasticStretchingForce.cpp  main.cpp  timeStepper.cpp  timeStepper.h  world.cpp  world.h
targets/: target_shape0.txt  target_shape1.txt
